Changed license link

--- a/app/html/info.html
+++ b/app/html/info.html
@@ -15,7 +15,7 @@
         <div class="ui-content ui-block bg-white">
             <p id="omines"><a href="https://www.omines.nl" target="_blank">Copyright &copy; <span>Omines Full Service Internetbureau</span></a></p>
             <p>Concept: <a href="http://weszel.nl" target="_blank">Wesley van Breukelen</a></p>
-            <p>License: <a href="http://www.gnu.org/licenses/agpl.html" class="license" target="_blank">GNU AGPL v3</a></p>
+            <p>License: <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html" class="license" target="_blank">GNU GPL v2</a></p>
         </div>
     </div>
 </ons-page>
